Bug 363238 - saved searches fail for searches on x-headers, r=irving